# yakoon

./: .coverage  .gitignore  .vimrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  README.md  TODO.md  name.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  version.txt  yakoon.db  yakoon.yml
__old__/yakoon-core-hosts/: pyproject.toml
apps/y5napp-console/: pyproject.toml
apps/y5napp-console/src/y5napp/console/: __main__.py  app.py
apps/y5napp-runtime/: pyproject.toml
apps/y5napp-runtime/src/y5napp/runtime/: __main__.py  conf.py  yakoon-runtime.yml
apps/y5napp-textual/: pyproject.toml
apps/y5napp-textual/src/y5napp/textual/: __init__.py  __main__.py  app.py  conf.py  inlines.py  input.py  output.py  tab.py  terminal.py  terminal.tcss  wire.py  yakoon-texture.yml
apps/y5napp-web/: index.html  pyproject.toml
apps/y5napp-web/assets/: base.css  block.css
apps/y5napp-web/js/: app.js  dom.js  stream.js
apps/y5napp-web/js/renderer/block/: collapsible.js  list_item.js  spacer.js  stack.js
apps/y5napp-web/js/renderer/inline/: cmd.js  text.js  underline.js
apps/y5napp-web/src/y5napp/web/: __main__.py  app.py  conf.py  main.py  server.py  yakoon-web.yml
clients/y5ncli-textual/: pyproject.toml
clients/y5ncli-textual/src/y5ncli/textual/: terminal.py  terminal.tcss
repos/y5napp-ident/: README.md  pack.toml  pyproject.toml
repos/y5napp-luma/: pack.toml  pyproject.toml
repos/y5napp-luma/src/_yak/: yak.yml
repos/y5napp-luma/src/box/_yak/: yak.yml
repos/y5napp-luma/src/box/add/: app.py
repos/y5napp-luma/src/box/delete/: app.py
repos/y5napp-luma/src/box/edit/: app.py  ports.py
repos/y5napp-luma/src/box/list/: app.py
repos/y5napp-luma/src/box/show/: app.py
repos/y5napp-luma/src/connect/: app.py
repos/y5napp-luma/src/dig/: app.py
repos/y5napp-luma/src/dig/_yak/: yak.yml
repos/y5napp-luma/src/drop/_yak/: yak.yml
repos/y5napp-luma/src/enter/: app.py
repos/y5napp-luma/src/enter/resources/: man.ydf
repos/y5napp-luma/src/exit/_yak/: yak.yml
repos/y5napp-luma/src/exit/delete/: app.py
repos/y5napp-luma/src/exit/edit/: app.py
repos/y5napp-luma/src/exit/list/: app.py
repos/y5napp-luma/src/exit/show/: app.py
repos/y5napp-luma/src/go/: app.py  ports.py
repos/y5napp-luma/src/inspect/: app.py  ports.py
repos/y5napp-luma/src/inspect/_yak/: yak.yml
repos/y5napp-luma/src/inv/_yak/: yak.yml
repos/y5napp-luma/src/leave/: app.py
repos/y5napp-luma/src/leave/_yak/: yak.yml
repos/y5napp-luma/src/libs/: setup.py
repos/y5napp-luma/src/libs/models/: world.py
repos/y5napp-luma/src/libs/services/: box.py  exit.py  note.py  world.py
repos/y5napp-luma/src/libs/settings/: __init__.py
repos/y5napp-luma/src/look/: app.py  ports.py
repos/y5napp-luma/src/look/_yak/: yak.yml
repos/y5napp-luma/src/move/resources/: man.ydf
repos/y5napp-luma/src/note/_yak/: yak.yml
repos/y5napp-luma/src/note/add/: app.py
repos/y5napp-luma/src/note/delete/: app.py
repos/y5napp-luma/src/note/edit/: app.py
repos/y5napp-luma/src/note/inbox/: app.py  ports.py
repos/y5napp-luma/src/note/list/: app.py
repos/y5napp-luma/src/note/put/: app.py
repos/y5napp-luma/src/note/remove/: app.py  ports.py
repos/y5napp-luma/src/place/_yak/: yak.yml
repos/y5napp-luma/src/take/: ports.py
repos/y5napp-luma/src/world/add/: app.py
repos/y5napp-luma/src/world/delete/: app.py
repos/y5napp-luma/src/world/edit/: app.py
repos/y5napp-luma/src/world/list/: app.py
repos/y5napp-luma/src/world/show/: app.py
repos/y5napp-luma/tests/: conftest.py  test_box.py  test_exit.py  test_navigation.py  test_note.py  test_world.py
runtime/engine/: pyproject.toml
runtime/engine/tests/: conftest.py  test_commands.py  test_jobs.py  test_parallel.py  test_resolution.py  test_session_contracts.py  test_user_input.py
runtime/engine/tests/benchmarks/: test_benchmarks.py  test_memory.py
runtime/engine/tests/support/: events.py  flow.py  runtime.py
runtime/llm/: pyproject.toml
runtime/y5ncore-base/: pyproject.toml
runtime/y5ncore-base/src/y5n/api/: data.py  documents.py  dsl.py  flow.py  flows.py  invocations.py  modules.py  naming.py  nodes.py  permissions.py  ports.py  projections.py  resources.py  runtime.py  sessions.py
runtime/y5ncore-base/src/y5n/base/: config.py  llm.py
runtime/y5ncore-llm/: pyproject.toml
runtime/y5ncore-runtime/: pyproject.toml
runtime/y5ncore-runtime/tests/: conftest.py  test_channels.py  test_commands.py  test_foreground.py  test_jobs.py  test_parallel.py  test_resolution.py  test_session_contracts.py  test_tasks.py  test_user_input.py
runtime/y5ncore-runtime/tests/benchmarks/: test_benchmarks.py  test_memory.py
runtime/y5ncore-runtime/tests/support/: events.py  flow.py  runtime.py
spaces/y5nspace-crm/: pyproject.toml
spaces/y5nspace-crm/src/y5nspace/crm/: __init__.py  ports.py  space.py
spaces/y5nspace-ident/: pyproject.toml
spaces/y5nspace-ident/src/y5nspace/ident/: __init__.py  ports.py  root.py  space.py
spaces/y5nspace-luma/: pyproject.toml
spaces/y5nspace-luma/src/y5nspace/luma/: __init__.py  data.py  ports.py  space.py
spaces/y5nspace-luma/tests/: conftest.py
spaces/y5nspace-luma/tests/commands/: test_box.py  test_exit.py  test_navigation.py  test_note.py  test_world.py
spaces/y5nspace-luma/tests/fixtures/: import-notes.json
spaces/y5nspace-runtime/: pyproject.toml
spaces/y5nspace-runtime/src/y5nspace/runtime/: __init__.py  on_setup.py  root.py  space.py
spaces/y5nspace-runtime/src/yakoon/playground/: __init__.py  controller_dsl.py  controller_patterns.py
spaces/y5nspace-shell/: README.md  pyproject.toml
spaces/y5nspace-shell/src/y5nspace/shell/: __init__.py  on_setup.py  ports.py  root.py  space.py
stores/y5nstore-event/: pyproject.toml
stores/y5nstore-event/sql/postgres/: CREATE_INDEX.sql  CREATE_TABLE.sql
stores/y5nstore-event/tests/: conftest.py  test_contracts.py
stores/y5nstore-sequence/: pyproject.toml
stores/y5nstore-sequence/sql/postgres/: CREATE_TABLE.sql
stores/y5nstore-sequence/tests/: test_sequence.py
(+4217 files in other folders)
