[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yakoon"
version = "0.1.0"
description = "The Yakoon MUD Engine"
authors = [
    { name="Stefan Bergmann", email="stefan.bergmann.cx@gmail.com" }
]
dependencies = []

[project.scripts]
yakoon = "yakoon.cli:main"
