[project]
name = "yakoon"
version = "0.8.0"
description = "Operative runtime for long-running flows, state, and projections"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["benchmarks"]
pythonpath = ["repos/yakoon-luma/src"]
markers = [
    "benchmark: performance benchmarks (skipped by default)",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["yakoon"]
