[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yakoon-core-hosts"
version = "0.1.0"
dependencies = ["y5ncore-base", "y5ncore-runtime", "yakoon-core-compose"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
