[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5napp-runtime"
version = "0.1.0"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["y5ncore-base", "y5ncore-runtime", "y5n-runtime-transport", "websockets"]

[project.scripts]
yakoon-runtime = "y5napp.runtime.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"y5napp.runtime" = ["*.yml"]
