[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5napp-textual"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = [
    "y5ncore-base",
    "y5ncore-runtime",
    "textual>=0.52.0",
    ]

[project.scripts]
y5napp-textual = "y5napp.textual.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
