[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5napp-textual"
version = "0.3.0"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["y5ncore-base", "y5ncore-runtime", "y5ntrans-ws", "textual>=0.52.0", "websockets", "pyyaml"]

[project.scripts]
yakoon-texture = "y5napp.textual.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"y5napp.textual" = ["*.yml"]
