[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5napp-ident"
version = "0.1.0"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["y5n-runtime-api", "y5ncore-sdk", "y5nstore-event"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
