[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5ncore-runtime"
version = "0.8.0"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["y5ncore-base", "y5nstore-event", "jinja2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
