[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5nspace-luma"
version = "0.1.0"
description = "Luma — Spatial Knowledge System"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = [
    "y5ncore-base",
    "y5ncore-runtime",
]

[tool.setuptools.packages.find]
where = ["src"]
