[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5nspace-shell"
version = "0.2.0"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["y5ncore-base"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
