[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5nstore-event"
version = "0.5.0"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["jsonpatch", "asyncpg"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
