[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y5nstore-sequence"
version = "0.1.0"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stefan Bergmann" }]
dependencies = ["asyncpg"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
